# FreelanceSite

./: .gitignore  CNAME  PROJECT.md  README.txt  app.js  astro.config.mjs  index.html  package-lock.json  package.json  services.txt  styles.css
.astro/: content.d.ts  data-store.json  settings.json
.astro/collections/: projects.schema.json  services.schema.json
api/: .env.example  pyproject.toml
api/app/: config.py  main.py
api/app/models/: commission.py
api/app/routes/: commissions.py
api/tests/: test_commissions.py
src/: content.config.ts
src/components/: CommissionForm.astro  Footer.astro  Header.astro  Hero.astro  ProjectCard.astro  ProjectList.astro  ServiceCard.astro
src/content/projects/: matchmaker-mayhem.md  netcode-lib.md  now-hiring.md  penguin-adventure.md  pixel-runner.md  prism-of-you.md  shadow-keep.md  unchained.md
src/content/services/: consultation.md  custom-game-dev.md  game-art-integration.md  game-dev-tools.md  rapid-prototype.md
src/data/: site.ts
src/layouts/: BaseLayout.astro
src/pages/: index.astro  storefront.astro
src/pages/projects/: [...slug].astro  index.astro
src/styles/: commission-form.module.css  footer.module.css  global.css  header.module.css  hero.module.css  project-card.module.css  service-card.module.css
